kubernetes/apps/paperless-ngx/app/gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name gotenberg
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: *name
    spec:
      containers:
        - name: *name
          image: docker.io/gotenberg/gotenberg:8.24
          args:
            - "gotenberg"
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
#      securityContext:
#        runAsUser: 1001
#        runAsGroup: 1001
#        fsGroup: 1001
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless-ngx
spec:
  selector:
    app.kubernetes.io/component: gotenberg
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
