kubernetes/apps/paperless-ngx/app/tika.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name tika
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: *name
    spec:
      containers:
        - name: *name
          image: docker.io/apache/tika:3.2.1.0
          ports:
            - containerPort: 9998
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
#      securityContext:
#        runAsUser: 35002
#        runAsGroup: 35002
#        fsGroup: 35002
---
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless-ngx
spec:
  selector:
    app.kubernetes.io/component: tika
  ports:
    - name: http
      port: 9998
      targetPort: 9998
      protocol: TCP
  type: ClusterIP
