kubernetes/apps/paperless-ngx/app/paperless-ngx-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name paperless-ngx
  namespace: default
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "paperless.blarc.my.id"
  rules:
    - backendRefs:
        - name: *name
          port: 8000
